# PseudorandomNumberGenerator

./: CMakeLists.txt  README.md
include/: io.h  prng.h
src/: CMakeLists.txt  args.c  io.c  prng.c
src/include/: args.h  randlc.h
